# modified_dwa

./: LICENSE  README.md
iri_navigation/iri_ackermann_local_planner/: CMakeLists.txt  ackermannlp_plugin.xml  mainpage.dox  package.xml
iri_navigation/iri_ackermann_local_planner/cfg/: AckermannLocalPlanner.cfg
iri_navigation/iri_ackermann_local_planner/docs/: AckermannLocalPlannerConfig-usage.dox  AckermannLocalPlannerConfig.dox  AckermannLocalPlannerConfig.wikidoc
iri_navigation/iri_ackermann_local_planner/include/: ackermann_odom_helper.h  ackermann_planner.h  ackermann_planner_limits.h  ackermann_planner_ros.h  ackermann_planner_util.h  ackermann_trajectory_generator.h  ackermann_trajectory_search.h  heading_cost_function.h
iri_navigation/iri_ackermann_local_planner/src/: ackermann_odom_helper.cpp  ackermann_planner.cpp  ackermann_planner_ros.cpp  ackermann_planner_util.cpp  ackermann_trajectory_generator.cpp  ackermann_trajectory_search.cpp  heading_cost_function.cpp
iri_navigation/iri_akp_tools/: CMakeLists.txt  package.xml
iri_navigation/iri_akp_tools/cfg/: DiffPlatformSimulator.cfg  FakeLaserGen.cfg
iri_navigation/iri_akp_tools/include/: diff_platform_simulator_alg.h  diff_platform_simulator_alg_node.h  fake_laser_gen_alg.h  fake_laser_gen_alg_node.h
iri_navigation/iri_akp_tools/launch/: diff_platform_simulator.launch  fake_laser_gen.launch  fake_localization.launch  map_server.launch  map_server_local.launch
iri_navigation/iri_akp_tools/src/: diff_platform_simulator_alg.cpp  diff_platform_simulator_alg_node.cpp  fake_laser_gen_alg.cpp  fake_laser_gen_alg_node.cpp
iri_navigation/iri_akp_tools_companion/: CMakeLists.txt  package.xml
iri_navigation/iri_akp_tools_companion/cfg/: FakeLaserGen.cfg
iri_navigation/iri_akp_tools_companion/include/: diff_platform_simulator_alg.h  fake_laser_gen_alg.h  fake_laser_gen_alg_node.h
iri_navigation/iri_akp_tools_companion/launch/: diff_platform_simulator.launch  diff_platform_simulator2.launch  diff_platform_simulator3.launch  fake_laser_gen.launch  fake_laser_gen2.launch  fake_laser_gen3.launch  fake_localization.launch  fake_localization2.launch  fake_localization3.launch  map_server.launch  map_server_local.launch  map_server_local2.launch  map_server_local3.launch
iri_navigation/iri_akp_tools_companion/src/: diff_platform_simulator_alg_node.cpp  fake_laser_gen_alg_node.cpp
iri_navigation/iri_atr_akp_local_planner_companion/: CMakeLists.txt  akp_lp_plugin.xml  package.xml
iri_navigation/iri_atr_akp_local_planner_companion/cfg/: AkpLocalPlanner.cfg
iri_navigation/iri_atr_akp_local_planner_companion/config/: dabo.rviz  tibi.rviz  tibi_akp.rviz  tibi_learning.rviz
iri_navigation/iri_atr_akp_local_planner_companion/include/: akp_local_planner_alg.h  akp_local_planner_alg_node.h
iri_navigation/iri_atr_akp_local_planner_companion/launch/: akp.launch  akp2.launch  akp3_ICRA.launch  akp4_journal.launch  learning_parameters_simulation_test.launch  model2.launch  rosbag_view.launch  tibi_and_simulated_ElyTELEOP.launch  tibi_dabo_akp_local_sim.launch
iri_navigation/iri_atr_akp_local_planner_companion/maps/: 1_pasillo_estrecho_random_people_fme_open_destinations_sim.txt  1_rand_people_ok_fme_open_destinations_sim.txt  2_pasillo_estrecho_random_people_fme_open_destinations_sim.txt  3_pasillo_estrecho_random_people_fme_open_destinations_sim.txt  brl.yaml  brl_balcon.txt  empty_with_obstacles.yaml  empty_with_obstacles2.pgm  empty_with_obstacles2_rand_people.pgm  empty_with_obstacles2_rand_people.yaml  empty_with_obstacles2_rand_people2.pgm  empty_with_obstacles2_rand_people2.yaml  empty_with_obstacles_rand_people.pgm  empty_with_obstacles_rand_people.yaml  fme_open_destinations.txt  fme_open_destinations2_obst_front_BUENO.txt  fme_open_destinations_4_dest.txt  fme_open_destinations_brl_big.txt  fme_open_destinations_sim_BUENO_ICRA_person_target_horizontal_bueno_final.txt  fme_open_destinations_sim_BUENO_paper_ICRA_dest2.txt  fme_open_destinations_sim_BUENO_paper_ICRA_dest3.txt  fme_open_destinations_sim_gazebo.txt  fme_open_destinations_sim_gazebo2.txt  fme_open_destinations_sim_ramdom_people_pasillo_ancho_journal.txt  fme_open_obst.pgm  pasillo_simulation.yaml
iri_navigation/iri_atr_akp_local_planner_companion/src/: akp_local_planner_alg_node.cpp
iri_navigation/iri_nav_msgs/: CMakeLists.txt  mainpage.dox  package.xml
iri_navigation/iri_nav_msgs/action/: followTarget.action
iri_navigation/iri_people_simulation_companion/: CMakeLists.txt  package.xml
iri_navigation/iri_people_simulation_companion/cfg/: PeopleSimulation.cfg
iri_navigation/iri_people_simulation_companion/docs/: PeopleSimulationConfig.wikidoc
iri_navigation/iri_people_simulation_companion/include/: people_simulation_alg.h  people_simulation_alg_node.h
iri_navigation/iri_people_simulation_companion/launch/: people_sim.launch  people_sim_debug.launch  people_simulation.launch
iri_navigation/iri_people_simulation_companion/map/: 4_destinations.txt  fme_open_destinations.txt  fme_open_destinations_bueno.txt  fme_open_destinations_giro_BUENO.txt  fme_open_destinations_giro_BUENO_version_giro2.txt  fme_open_destinations_obs_fron_BUENO.txt  fme_open_destinations_obs_fron_BUENO_personas.txt  fme_open_destinations_obs_fron_BUENO_personas_v2.txt
iri_navigation/iri_people_simulation_companion/src/: people_simulation_alg.cpp  people_simulation_alg_node.cpp
iri_navigation/iri_platform_teleop/: CMakeLists.txt  mainpage.dox  package.xml
iri_navigation/iri_platform_teleop/cfg/: PlatformTeleop.cfg
iri_navigation/iri_platform_teleop/config/: segway_teleop.vcg
iri_navigation/iri_platform_teleop/docs/: PlatformTeleopConfig-usage.dox  PlatformTeleopConfig.dox  PlatformTeleopConfig.wikidoc
iri_navigation/iri_poseslam/: CMakeLists.txt  mainpage.dox  package.xml  poseslam.rosinstall  readme.txt
iri_navigation/iri_safe_cmd/: CMakeLists.txt  mainpage.dox  package.xml
iri_navigation/iri_simulated_person_companion_akp_local_planner/: CMakeLists.txt  akp_lp_plugin.xml  package.xml
iri_navigation/iri_wolf/: CMakeLists.txt  package.xml
(+488 files in other folders)
